feat: let users report submissions to analysts
